--- a/index.html
+++ b/index.html
@@ -11,11 +11,84 @@
 
     <script>
       var cryptoZombies;
+      var userAccount;
 
       function startApp() {
         var cryptoZombiesAddress = "YOUR_CONTRACT_ADDRESS";
         cryptoZombies = new web3js.eth.Contract(cryptoZombiesABI, cryptoZombiesAddress);
+
+
+        var accountInterval = setInterval(function() {
+            // Check if account has changed
+            if (web3.eth.accounts[0] !== userAccount) {
+              userAccount = web3.eth.accounts[0];
+              // Call some function to update the UI with the new account
+              getZombiesByOwner(userAccount)
+                .then(displayZombies);
+            }
+        }, 100);
       }
+
+      function displayZombies(ids) {
+        // Start here
+        $("#zombies").empty();
+          for( id of ids){
+            getZombieDetails(id)
+            .then(function(zombie) {
+              
+              
+              $("#zombies").append(`<div class="zombie">
+                <ul>
+                  <li>Name: ${zombie.name}</li>
+                  <li>DNA: ${zombie.dna}</li>
+                  <li>Level: ${zombie.level}</li>
+                  <li>Wins: ${zombie.winCount}</li>
+                  <li>Losses: ${zombie.lossCount}</li>
+                  <li>Ready Time: ${zombie.readyTime}</li>
+                </ul>
+              </div>`);
+            });
+        }
+      }
+
+      function createRandomZombie(name) {
+        // This is going to take a while, so update the UI to let the user know
+        // the transaction has been sent
+        $("#txStatus").text("Creating new zombie on the blockchain. This may take a while...");
+        // Send the tx to our contract:
+        return cryptoZombies.methods.createRandomZombie(name)
+        .send({ from: userAccount })
+        .on("receipt", function(receipt) {
+          $("#txStatus").text("Successfully created " + name + "!");
+          // Transaction was accepted into the blockchain, let's redraw the UI
+          getZombiesByOwner(userAccount).then(displayZombies);
+        })
+        .on("error", function(error) {
+          // Do something to alert the user their transaction has failed
+          $("#txStatus").text(error);
+        });
+      }
+
+       function feedOnKitty(zombieId, kittyId) {
+        // This is going to take a while, so update the UI to let the user know
+        // the transaction has been sent
+        $("#txStatus").text("Eating a kitty. This may take a while...");
+        // Send the tx to our contract:
+        return cryptoZombies.methods.feedOnKitty(zombieId, kittyId)
+        .send({ from: userAccount })
+        .on("receipt", function(receipt) {
+          $("#txStatus").text("Ate a kitty and spawned a new Zombie!");
+          // Transaction was accepted into the blockchain, let's redraw the UI
+          getZombiesByOwner(userAccount).then(displayZombies);
+        })
+        .on("error", function(error) {
+          // Do something to alert the user their transaction has failed
+          $("#txStatus").text(error);
+        });
+      }
+
+
+
 
       function getZombieDetails(id) {
         return cryptoZombies.methods.zombies(id).call()
